# text_rpg

./: README.md  demo.py  engine.py  main.py
ash_attempt/: text.txt
eloy/: README.md  __init__.py  client.py  formatter.py  gameLoop.py  netcode.py  parsecolors.py  render2.py  renderer.py  rendering.py
eloy/esper/: __init__.py
eloy/libp2py/: Cargo.toml  pyproject.toml
eloy/libp2py/src/: lib.rs
eloy/rendering/: rendering.py
mafia/: components.py  entities.py  systems.py
mafia/narrator/: deaths.txt  introductions.txt  nightPhaseGuilty.txt  nightPhaseInnocent.txt
