[package]
name = "libp2py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libp2py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
futures = "0.3.29"
libp2p = { version = "0.53.1", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ringbuffer = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.20"
